# Transactions_widget

./: .gitignore  README.md  main.py  pyproject.toml
TW/: pyproject.toml
src/: func.py  main.py
tests/: test_func.py  test_main.py
