[tool.poetry]
name = "transactions-widget"
version = "0.1.0"
description = ""
authors = ["Artem Ershov <colombadoro@ya.ru>"]
readme = "README.md"
packages = [{include = "transactions_widget"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
